--- a/app.json
+++ b/app.json
@@ -5,23 +5,29 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
+    "splash":{
+      "image":"./assets/images/splash-icon.png",
+      "resizeMode":"contain",
+      "backgroundColor":"#ffffff"
+    },
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
         "NSAppleMusicUsageDescription": "Cette application nécessite l'accès à la musique pour lire des pistes audio.",
-        "UIBackgroundModes": ["audio"]
+        "UIBackgroundModes": [
+          "audio"
+        ]
       }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff",
-        "useNextNotificationsApi": true,
-        "permissions": ["android.permission.FOREGROUND_SERVICE"]
-      }
+        "backgroundColor": "#ffffff"
+      },
+      "package": "com.anonymous.zikanazy"
     },
     "web": {
       "bundler": "metro",
@@ -42,6 +48,16 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "5aee45bd-9be2-4fbf-a1a4-0f6aee49caf3"
+      }
+    },
+    "owner": "voahary"
   }
 }
+
