feat: change icon and splash screen image

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "zikan-azy",
     "slug": "zikan-azy",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/images/icon.png",
     "splash":{
       "image":"./assets/images/splash-icon.png",
